# cppBase

./: BaseClass.cpp  BaseClass.h  Builder3D.cpp  CMakeLists.txt  Console.cpp  Console.h  Exception.cpp  Exception.h  Factory.cpp  Factory.h  PreCompiled.h  Quantity.cpp  Readme.md  Rotation.cpp  Sequencer.cpp  Sequencer.h  SequencerTest.cpp  Tools.cpp  Tools.h  Type.cpp  Type.h  TypeTest.cpp  UnitsApi.cpp  UnitsApi.h  UnitsSchema.h  UnitsSchemaImperial1.cpp  compatible.h
doc/: FreeCADBaseChangeLog.md  PythonBinding.md  TypeSystem.md
